add get user info by token API.
