# api/swagger/swagger.yaml
@@ -66,6 +66,30 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /user/{token}:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: user
+    get:
+      description: API for get user info by token.
+      # used as the method name of the controller
+      operationId: getUserInfoByToken
+      parameters:
+        - name: token
+          in: path
+          description: Token of user.
+          required: true
+          type: string
+      responses:
+        "201":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/BaseSuccessRespone"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"          
   /users/role:
     # binds a127 app logic to a route
     x-swagger-router-controller: user
@@ -120,7 +144,7 @@ paths:
     # binds a127 app logic to a route
     x-swagger-router-controller: user
     get:
-      description: API for create card info.
+      description: API for get card info by user_id.
       # used as the method name of the controller
       operationId: getUserPaymentInfo
       parameters:
